--- a/Projeto/src/components/TelaRegistro/Registro.css
+++ b/Projeto/src/components/TelaRegistro/Registro.css
@@ -13,12 +13,12 @@ text-align: center;
 justify-content: flex-start;
 width: 25vw;
 height: 100vh;
-padding-top: 60px;
+padding-top: 50px;
 
 }
 
 .tituloRegistro {
-font-size: 64px;
+font-size: 54px;
 font-weight: 400;
 color: #4B626C;
 text-align: center;
@@ -38,7 +38,7 @@ line-height: 78.02px;
 }
 
 .conjuntoInputs input {
-    width: 68%;
+    width: 72%;
     height: 41px;
     padding: 11px 14px;
     font-size: 16px;
@@ -46,18 +46,20 @@ line-height: 78.02px;
     border-radius: 5px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
     outline: none;
+    color: #EFEFEF;
     transition: all 0.3s ease;
 }
 
 .conjuntoInputs input::placeholder {
     font-size: 17px;
+    line-height: 29.26px;
+    color: #97A4A2;
 
 }
 
 .botaoSeta {
     color: #4B626C;
-    padding-top: 2%;
-    padding-left: 65%;
+    padding-left: 64%;
     
 }
 
@@ -84,7 +86,7 @@ line-height: 78.02px;
     position: absolute;
     bottom: 40px;
     left: 50px;
-    font-size: 24px;
+    font-size: 16px;
     color: #97A4A2;
     font-weight: 500;
     line-height: 29.26px;
