--- a/Projeto/src/components/ImagemTelasInic/ImagemTelasInic.css
+++ b/Projeto/src/components/ImagemTelasInic/ImagemTelasInic.css
@@ -1,7 +1,8 @@
-.blocoImagem {
-    width: 75vw;
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-  }
+.blocoImagem{
+  width: 75vw;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../../assets/imagem2.png");
+  background-position: center;
+}
