--- a/Projeto/src/routes/TelaRegistro/Registro.css
+++ b/Projeto/src/routes/TelaRegistro/Registro.css
@@ -1,100 +1,36 @@
-.container{
+.container {
     display: flex;
     flex-direction: row;
     height: 100vh;
-}
+  }
+  
+  .blocoRegistro {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: flex-start;
+    width: 25vw;
+    height: 100vh;
+    padding-top: 50px;
+  }
+  
+  .tituloRegistro {
+    font-size: 54px;
+    font-weight: 400;
+    color: #4b626c;
+    margin-bottom: 50px;
+    line-height: 78.02px;
+  }
 
+  .conjuntoInputs {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin : 0 auto; 
+ }
 
-
-.blocoRegistro {
-display: flex;
-flex-direction: column;
-text-align: center;
-justify-content: flex-start;
-width: 25vw;
-height: 100vh;
-padding-top: 50px;
-
-}
-
-.tituloRegistro {
-font-size: 54px;
-font-weight: 400;
-color: #4B626C;
-text-align: center;
-margin-bottom: 50px;
-line-height: 78.02px;
-
-}
-
-.conjuntoInputs {
-   width: 100%;
-   display: flex;
-   flex-direction: column;
-   gap: 40px;
-   margin : 0 auto;
-
-   
-}
-
-.conjuntoInputs input {
-    width: 72%;
-    height: 41px;
-    padding: 11px 14px;
-    font-size: 16px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
-    outline: none;
-    color: #EFEFEF;
-    transition: all 0.3s ease;
-}
-
-.conjuntoInputs input::placeholder {
-    font-size: 17px;
-    line-height: 29.26px;
-    color: #97A4A2;
-
-}
-
-.botaoSeta {
+ .botaoSeta {
     color: #4B626C;
     padding-left: 64%;
-    
 }
-
-.button{
-    border: none;
-    cursor: pointer;
-    > svg{
-        color: #4B626C;
-        font-size: 40px;
-    }
-   
-}
-
-.blocoImagem{
-    width: 75vw;
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("../../assets/imagem2.png");
-    background-position: center;
-}
-
-.irParaLogin {
-    position: absolute;
-    bottom: 40px;
-    left: 50px;
-    font-size: 16px;
-    color: #97A4A2;
-    font-weight: 500;
-    line-height: 29.26px;
-    
-}
-
-.irParaLogin a {
-    text-decoration: none;
-    color: inherit;
-}
-
